<resources>
    <string name="app_name">HelloSud</string>
    <string name="login_welcome">Welcome \nHelloSud</string>
    <string name="login_your_name">Your nickname</string>
    <string name="title_hellosud">HelloSud</string>
    <string name="login_edit_name">Enter your nickname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="play_now">Try Now</string>
    <string name="search_hint">Join With Room Number</string>
    <string name="tabs_index">Home</string>
    <string name="tabs_room">Room</string>
    <string name="tabs_set">Settings</string>
    <string name="useragreement_title">Welcome to HelloSud</string>
    <string name="useragreement_content_part1">We take the protection of your personal information very seriously. For more information about the collection and use of personal information, tap the</string>
    <string name="useragreement_content_part2">User Agreement</string>
    <string name="useragreement_content_part3">and</string>
    <string name="useragreement_content_part4">Privacy Policy</string>
    <string name="useragreement_content_part5">Read carefully. Tap Agree to indicate you\'ve read and agreed to all of the above agreements</string>
    <string name="useragreement_reject">Don\'t agree</string>
    <string name="useragreement_agree">Agree</string>
    <string name="user_secondary_title">Tip</string>
    <string name="user_secondary_content">HelloSud will only use your information for providing services and improving the experience. We will do our best to protect your information security, agree to continue
\n If you don\'t agree to the Privacy Policy, unfortunatelly we can not provide you with the complete products and services</string>
    <string name="user_secondary_reject">Close App</string>
    <string name="user_secondary_agree">Agree and continue to use</string>
    <string name="setting_sdk_version">SDK Version</string>
    <string name="setting_app_version">App Version</string>
    <string name="setting_useragreement">User Agreement</string>
    <string name="setting_privacy">Privacy Policy</string>
    <string name="setting_contact">Contact Us</string>
    <string name="setting_userid">User ID %1$s</string>
    <string name="setting_userid1">User ID: %1$s</string>
    <string name="coming_soon">Stay tuned</string>
    <string name="room_list_enter">Enter</string>
    <string name="room_list_roomid">room ID: %1$s</string>
    <string name="room_list_online">%1$s users</string>
    <string name="setting_contact1_content">For more information or feedback,contact us via email: help@sud.tech</string>
    <string name="setting_contact1_but">OK</string>
    <string-array name="names_list">
        <item>哈利</item>
        <item>祺祥</item>
        <item>沐辰</item>
        <item>阿米莉亚</item>
        <item>齐默尔曼</item>
        <item>陌北</item>
        <item>旺仔</item>
        <item>半夏</item>
        <item>朝雨</item>
        <item>卫斯理</item>
        <item>阿道夫</item>
        <item>长青</item>
        <item>安小六</item>
        <item>小凡</item>
        <item>炎月</item>
        <item>醉风</item>
        <item>斯科特</item>
        <item>布卢默</item>
        <item>宛岩</item>
        <item>平萱</item>
        <item>凝雁</item>
        <item>怀亚特</item>
        <item>格伦巴特</item>
        <item>尔白</item>
        <item>南露</item>
        <item>爱丽丝</item>
        <item>埃尔维斯</item>
        <item>奥利维亚</item>
        <item>妙竹</item>
        <item>雲思衣</item>
        <item>少女大佬</item>
        <item>兔兔别跑</item>
        <item>夏纱</item>
        <item>嘉慕</item>
        <item>阿拉贝拉</item>
        <item>星剑</item>
        <item>罗德斯</item>
        <item>渡满归</item>
        <item>星浅</item>
        <item>问水</item>
        <item>星奕晨</item>
        <item>丹尼尔</item>
        <item>白止扇</item>
        <item>暖暖</item>
        <item>埃迪</item>
        <item>杰里米</item>
        <item>玛德琳</item>
        <item>波佩</item>
        <item>卡诺</item>
        <item>泡芙</item>
        <item>帕特里克</item>
        <item>梅雷迪斯</item>
        <item>公孙昕</item>
        <item>青弘</item>
        <item>潘豆豆</item>
        <item>小番秀二</item>
        <item>大一宇</item>
        <item>米奇</item>
        <item>戴夫</item>
        <item>伯特</item>
        <item>米洛布雷</item>
        <item>阿德莱德</item>
        <item>吉宝</item>
        <item>伊娃</item>
        <item>路易斯</item>
        <item>希拉姆</item>
        <item>杰西</item>
        <item>贝特西</item>
        <item>利奥波德</item>
        <item>丽塔</item>
        <item>拉姆斯登</item>
        <item>伯纳德</item>
        <item>理查德</item>
        <item>奥尔德里奇</item>
        <item>劳里</item>
        <item>奥兰多</item>
        <item>埃尔罗伊</item>
        <item>栗和顺</item>
        <item>朱雀佳行</item>
        <item>理德拉</item>
        <item>凡勃伦</item>
        <item>科波菲尔</item>
        <item>玉谷大三</item>
        <item>大木元司</item>
        <item>钮阳冰</item>
        <item>盖勤</item>
        <item>紫心</item>
        <item>弘慕慕</item>
        <item>怀星驰</item>
        <item>泉宏胜</item>
        <item>闻人星海</item>
        <item>Watt</item>
        <item>Kevin</item>
        <item>Toby</item>
        <item>瓦利斯</item>
        <item>苏珊娜</item>
        <item>罗密欧</item>
        <item>福克纳</item>
        <item>多萝西</item>
        <item>贝尔</item>
        <item>卡门</item>
        <item>安德烈</item>
        <item>朱丽叶</item>
        <item>吉姆</item>
    </string-array>
    <string-array name="language_list">
        <item>Follow the system</item>
        <item>简体中文</item>
        <item>繁體中文</item>
        <item>English</item>
        <item>لغة عربية</item>
        <item>Bahasa Indonesia</item>
        <item>Bahasa Melayu</item>
        <item>ภาษาไทย</item>
        <item>Tiếng Việt</item>
        <item>한국어</item>
        <item>Español</item>
        <item>日本語</item>
        <item>اردو</item>
        <item>Türkçe</item>
        <item>Português</item>
        <item>हिंदी</item>
        <item>বাংলা</item>
        <item>Tagalog (Pilipinas)</item>
    </string-array>
    <string name="search_room_error">Enter the correct room number</string>
    <string name="user_agreement_title">User Agreement</string>
    <string name="user_privacy_title">Privacy Policy</string>
    <string name="roomlist_empty">No live streams right now \n
Go to homepage to create one~</string>
    <string name="search_enter">Enter</string>
    <string name="select_game">Select game</string>
    <string name="audio_click_got_mic">Click to turn mike on</string>
    <string name="audio_has_ready">Ready</string>
    <string name="audio_not_ready">Not ready</string>
    <string name="audio_got_mic">Mike on</string>
    <string name="audio_chat_hint">Let\'s chat~</string>
    <string name="audio_dialog_gift_present">Gift</string>
    <string name="audio_dialog_present">Give</string>
    <string name="audio_cancle">Cancel</string>
    <string name="audio_all">all</string>
    <string name="audio_mic_index">%1$d mic</string>
    <string name="audio_room_admin">Host</string>
    <string name="audio_send">Send</string>
    <string name="audio_send_msg_hint">Send a message…</string>
    <string name="audio_send_gift_user_empty">Select recipient</string>
    <string name="audio_send_gift_empty">Select present</string>
    <string name="audio_recreation_chat">General Chat</string>
    <string name="audio_chat_room">Chat Room</string>
    <string name="audio_gameing">In Game</string>
    <string name="audio_room_number">room ID</string>
    <string name="audio_close_room_title">Are you sure you want to leave the room?</string>
    <string name="audio_enter_the_room">Entered the room</string>
    <string name="audio_down_mic">Mike off</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_">Confirm to leave</string>
    <string name="common_go_setting">Settings</string>
    <string name="common_camera">Camera</string>
    <string name="common_storage">Storage</string>
    <string name="common_correlation">Related</string>
    <string name="common_record_audio">Recording</string>
    <string name="common_phone">Phone</string>
    <string name="common_setting_permission_info">Enable the %1$s permission in settings to use the %2$s APP function normally</string>
    <string name="close_game">Close Game</string>
    <string name="finish_game">End Game</string>
    <string name="index_creat_room">Create Room</string>
    <string name="index_game_join">Join </string>
    <string name="occupy_size">Occupied size</string>
    <string name="version_info">Version Info</string>
    <string name="change_rtc_service">Switch RTC service provider</string>
    <string name="change_language">Switch language</string>
    <string name="github">GitHub</string>
    <string name="open_source_licenses">Open source protocol</string>
    <string name="change_rtc_confirm">Are you sure you wan\'t to switch the RTC service provider to [%1$s]?</string>
    <string name="be_making">In production, stay tuned!</string>
    <string name="total_value">Total %1$s</string>
    <string name="finish_game_confirm">Are you sure you want to end the game?</string>
    <string name="playing_down_mic">The game has already started, are you sure you wan\'t to leave?</string>
    <string name="game_number">Number of players</string>
    <string name="rtc_name_zego">Zego</string>
    <string name="rtc_name_agora">Agora</string>
    <string name="rtc_name_rong_cloud">RongCloud</string>
    <string name="rtc_name_comms_ease">CommsEase</string>
    <string name="rtc_name_volc_engine">VoiceEngine</string>
    <string name="rtc_name_alibaba_cloud">Alibaba Cloud</string>
    <string name="rtc_name_tencent_cloud">Tencent Cloud</string>
    <string name="asr_guide">Our game supports speech recognition, turn your mic on and show your charming side~</string>
    <string name="asr_guide_number_boom">You can turn on the mic to count off. Bonus for slackers!</string>
    <string name="primary_field">Beginner Stage</string>
    <string name="middle_field">Intermediate Stage</string>
    <string name="high_field">Advanced Stage</string>
    <string name="win_multiple_award">Win %1$dx reward</string>
    <string name="dialog_game_stage">Game stage</string>
    <string name="dialog_game_api">API</string>
    <string name="dialog_game_before">Before joining the game</string>
    <string name="dialog_game_join_btn">①Join</string>
    <string name="dialog_game_ready">Preparation stage</string>
    <string name="dialog_game_ready_btn">②Ready</string>
    <string name="dialog_game_cancel_ready_btn">Cancel Ready</string>
    <string name="dialog_game_start_btn">③Start</string>
    <string name="dialog_game_exit_btn">Exit game</string>
    <string name="dialog_game_playing">In game</string>
    <string name="dialog_game_escape">Run away</string>
    <string name="dialog_game_release">End game</string>
    <string name="disco_ranking_explain">Disco Rank Description</string>
    <string name="disco_ranking_explain_content_1">Ranks update time: From Monday 00:00 to Sunday 24:00, updates in each natural week</string>
    <string name="disco_ranking_explain_content_2">Spotlight:\n In the Disco show, the number of times the players have got close-ups</string>
    <string name="disco_ranking_explain_content_3">Most Popular Rank:\n In the Disco show, the number of times the players have been invited to dance</string>
    <string name="rule">Rule</string>
    <string name="dance_rule_1">1. The streamer is idle now, you can dance with the streamer on the central stage after sending gifts of [Dance for 1 minute] or [Dance for 3 minutes].</string>
    <string name="dance_rule_2">2. The streamer is dancing with other players now, you can send the two gifts above to enter the queue.</string>
    <string name="dance_rule_3">3. The streamer you invited is queuing up in the queue. You can send [Cut in line for dance] to be the top of the streamer\'s queue, and you will be the next.</string>
    <string name="about_us">About</string>
</resources>