<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_f5f6fb"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <tech.sud.mgp.hello.ui.common.widget.HSTopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:topbar_titleText="@string/disco_ranking_explain"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textColor="@color/c_1a1a1a"
        android:text="@string/disco_ranking_explain_content_1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textColor="@color/c_1a1a1a"
        android:text="@string/disco_ranking_explain_content_2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textColor="@color/c_1a1a1a"
        android:text="@string/disco_ranking_explain_content_3" />

</LinearLayout>