<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_f5f6fb"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <tech.sud.mgp.hello.ui.common.widget.HSTopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:topbar_titleText="@string/about_us"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 主要内容 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <!-- 第三块 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginHorizontal="16dp">

                <tech.sud.mgp.hello.ui.main.settings.fragment.SettingButton
                    android:id="@+id/button_github"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:sb_name="@string/github" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/c_dddddd"
                    android:layout_marginHorizontal="20dp" />

                <tech.sud.mgp.hello.ui.main.settings.fragment.SettingButton
                    android:id="@+id/button_open_source_licenses"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:sb_name="@string/open_source_licenses" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/c_dddddd"
                    android:layout_marginHorizontal="20dp" />

                <tech.sud.mgp.hello.ui.main.settings.fragment.SettingButton
                    android:id="@+id/button_user_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:sb_name="@string/user_agreement_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/c_dddddd"
                    android:layout_marginHorizontal="20dp" />

                <tech.sud.mgp.hello.ui.main.settings.fragment.SettingButton
                    android:id="@+id/button_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:sb_name="@string/user_privacy_title" />

            </LinearLayout>

            <!-- 底部提示 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/c_8a8a8e"
                android:text="@string/setting_contact1_content"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>