<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="405dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ic_dancing_menu_bg">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/rule"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/view_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="fitCenter"
        android:padding="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/ic_white_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/dance_rule_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/dance_rule_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/dance_rule_3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>