<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="296dp"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp"
    android:paddingVertical="24dp"
    android:background="@drawable/shape_dialog_bg">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/useragreement_title"
        android:textColor="#1a1a1a"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#1a1a1a"
        android:textColorHighlight="#f2f2f2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <TextView
        android:id="@+id/reject_tv"
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/useragreement_reject"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_tv" />

    <TextView
        android:id="@+id/agree_tv"
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/useragreement_agree"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>